--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "convert-csv-to-json": "^1.3.3",
     "file-system": "^2.2.2",
     "fs": "^0.0.1-security",
-    "json-2-csv": "^3.17.1"
+    "json-2-csv": "^3.17.1",
+    "nodemailer": "^6.7.8"
   }
 }
